Fixed control display footer so it is not cut off by the window

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 #controls{
     position: relative;
     left: 30%;
-    top: 82%
+    top: 76%
 }
 #laps-lable{
     position: relative;
